--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,10 @@ markdown: kramdown
 sass:
   sass_dir: assets/sass
 
+plugins: ["jekyll-paginate"]
+
+permalink: :title
+
 # Pagination
 paginate: 4
 paginate_path: "/blog/page:num/"
